@@ -136,7 +136,7 @@ public class Felix extends BundleImpl implements Framework
     private final Condition m_bundleLockCondition = m_bundleLock.newCondition();
 
     // Keeps track of threads wanting to acquire the global lock.
-    private final List<Thread> m_globalLockWaitersList = new ArrayList<Thread>();
+    private final List<Thread> m_globalLockWaitersList = new ArrayList<>();
     // The thread currently holding the global lock.
     private Thread m_globalLockThread = null;
     // How many times the global lock was acquired by the thread holding
@@ -146,7 +146,7 @@ public class Felix extends BundleImpl implements Framework
 
     // Maps a bundle location to a bundle location;
     // used to reserve a location when installing a bundle.
-    private final Map<String, String> m_installRequestMap = new HashMap<String, String>();
+    private final Map<String, String> m_installRequestMap = new HashMap<>();
     // This lock must be acquired to modify m_installRequestMap;
     // to help avoid deadlock this lock as priority 1 and should
     // be acquired before locks with lower priority.
@@ -178,7 +178,7 @@ public class Felix extends BundleImpl implements Framework
     private volatile int m_targetStartLevel = FelixConstants.FRAMEWORK_INACTIVE_STARTLEVEL;
     // Keep track of bundles currently being processed by start level thread.
     private final SortedSet<StartLevelTuple> m_startLevelBundles =
-        new TreeSet<StartLevelTuple>();
+        new TreeSet<>();
 
     // Local bundle cache.
     private BundleCache m_cache = null;
@@ -357,7 +357,6 @@ public class Felix extends BundleImpl implements Framework
 
     public Felix(Map configMap, ModuleConnector connectFramework)
     {
-        super();
         // Copy the configuration properties; convert keys to strings.
         m_configMutableMap = new StringMap();
         if (configMap != null)
@@ -745,11 +744,11 @@ public class Felix extends BundleImpl implements Framework
                     new HashMap<String, BundleImpl>(1),
                     new TreeMap<Long, BundleImpl>()
                 };
-                m_uninstalledBundles = new ArrayList<BundleImpl>(0);
+                m_uninstalledBundles = new ArrayList<>(0);
 
                 // Add the system bundle to the set of installed bundles.
                 maps[LOCATION_MAP_IDX].put(_getLocation(), this);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(0), this);
+                maps[IDENTIFIER_MAP_IDX].put(0L, this);
                 m_installedBundles = maps;
 
 
@@ -935,7 +934,7 @@ public class Felix extends BundleImpl implements Framework
                                     new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                                 };
                                 maps[LOCATION_MAP_IDX].remove(((BundleImpl) bundle)._getLocation());
-                                maps[IDENTIFIER_MAP_IDX].remove(new Long(((BundleImpl) bundle).getBundleId()));
+                                maps[IDENTIFIER_MAP_IDX].remove(Long.valueOf(((BundleImpl) bundle).getBundleId()));
                                 m_installedBundles = maps;
 
                                 m_logger.log(
@@ -2659,7 +2658,7 @@ public class Felix extends BundleImpl implements Framework
                         {
                             try
                             {
-                                List<Bundle> list = new ArrayList<Bundle>(1);
+                                List<Bundle> list = new ArrayList<>(1);
                                 list.add(bundle);
                                 refreshPackages(list, null);
                             }
@@ -2963,7 +2962,7 @@ public class Felix extends BundleImpl implements Framework
                 target = (BundleImpl) maps[LOCATION_MAP_IDX].remove(bundle._getLocation());
                 if (target != null)
                 {
-                    maps[IDENTIFIER_MAP_IDX].remove(new Long(target.getBundleId()));
+                    maps[IDENTIFIER_MAP_IDX].remove(Long.valueOf(target.getBundleId()));
                     m_installedBundles = maps;
 
                     // Set the bundle's persistent state to uninstalled.
@@ -3009,12 +3008,12 @@ public class Felix extends BundleImpl implements Framework
         {
             // Populate a set of refresh candidates. This also includes any bundles that this bundle
             // is wired to but have previously been uninstalled.
-            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<Bundle>());
+            Set<Bundle> refreshCandidates = addUninstalled(bundle, new LinkedHashSet<>());
 
             try
             {
                 // First see if we can throw away the complete graph
-                Set<Bundle> dependent = new HashSet<Bundle>();
+                Set<Bundle> dependent = new HashSet<>();
                 for (Bundle b : refreshCandidates)
                 {
                     populateDependentGraph(b, dependent);
@@ -3090,7 +3089,7 @@ public class Felix extends BundleImpl implements Framework
                 }
             }
         }
-        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<Bundle>());
+        Set<Bundle> dependent = populateDependentGraph(bundle, new HashSet<>());
         for (Bundle b : dependent)
         {
             if (b.getState() == Bundle.UNINSTALLED && !refreshCandidates.contains(b))
@@ -3193,7 +3192,7 @@ public class Felix extends BundleImpl implements Framework
                     new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                 };
                 maps[LOCATION_MAP_IDX].put(bundle._getLocation(), bundle);
-                maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
+                maps[IDENTIFIER_MAP_IDX].put(Long.valueOf(bundle.getBundleId()), bundle);
                 m_installedBundles = maps;
             }
             finally
@@ -3358,7 +3357,7 @@ public class Felix extends BundleImpl implements Framework
                         new TreeMap<Long, BundleImpl>(m_installedBundles[IDENTIFIER_MAP_IDX])
                     };
                     maps[LOCATION_MAP_IDX].put(location, bundle);
-                    maps[IDENTIFIER_MAP_IDX].put(new Long(bundle.getBundleId()), bundle);
+                    maps[IDENTIFIER_MAP_IDX].put(Long.valueOf(bundle.getBundleId()), bundle);
                     m_installedBundles = maps;
                 }
                 finally
@@ -3397,9 +3396,9 @@ public class Felix extends BundleImpl implements Framework
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+                Collection<Bundle> bundles = new ArrayList<>(1);
                 bundles.add(existing);
-                bundles = new ShrinkableCollection<Bundle>(bundles);
+                bundles = new ShrinkableCollection<>(bundles);
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3470,7 +3469,7 @@ public class Felix extends BundleImpl implements Framework
     Bundle getBundle(BundleContext bc, long id)
     {
         BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+            m_installedBundles[IDENTIFIER_MAP_IDX].get(Long.valueOf(id));
         if (bundle != null)
         {
             List<BundleImpl> uninstalledBundles = m_uninstalledBundles;
@@ -3491,9 +3490,9 @@ public class Felix extends BundleImpl implements Framework
                 getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
         if (!hooks.isEmpty() && (bundle != null))
         {
-            Collection<Bundle> bundles = new ArrayList<Bundle>(1);
+            Collection<Bundle> bundles = new ArrayList<>(1);
             bundles.add(bundle);
-            bundles = new ShrinkableCollection<Bundle>(bundles);
+            bundles = new ShrinkableCollection<>(bundles);
             for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
             {
                 org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3532,7 +3531,7 @@ public class Felix extends BundleImpl implements Framework
     Bundle getBundle(long id)
     {
         BundleImpl bundle = (BundleImpl)
-            m_installedBundles[IDENTIFIER_MAP_IDX].get(new Long(id));
+            m_installedBundles[IDENTIFIER_MAP_IDX].get(Long.valueOf(id));
         if (bundle != null)
         {
             return bundle;
@@ -3568,7 +3567,7 @@ public class Felix extends BundleImpl implements Framework
                     getHookRegistry().getHooks(org.osgi.framework.hooks.bundle.FindHook.class);
             if (!hooks.isEmpty())
             {
-                Collection<Bundle> shrunkBundles = new ShrinkableCollection<Bundle>(new ArrayList<Bundle>(bundles));
+                Collection<Bundle> shrunkBundles = new ShrinkableCollection<>(new ArrayList<>(bundles));
                 for (ServiceReference<org.osgi.framework.hooks.bundle.FindHook> hook : hooks)
                 {
                     org.osgi.framework.hooks.bundle.FindHook fh = getService(this, hook, false);
@@ -3782,22 +3781,21 @@ public class Felix extends BundleImpl implements Framework
         // service object is a service factory.
         if (!(svcObj instanceof ServiceFactory))
         {
-            for (int i = 0; i < classNames.length; i++)
-            {
-                Class clazz = Util.loadClassUsingClass(svcObj.getClass(), classNames[i], m_secureAction);
+            for (String className : classNames) {
+                Class clazz = Util.loadClassUsingClass(svcObj.getClass(), className, m_secureAction);
                 if (clazz == null)
                 {
-                    if (!Util.checkImplementsWithName(svcObj.getClass(), classNames[i]))
+                    if (!Util.checkImplementsWithName(svcObj.getClass(), className))
                     {
                         throw new IllegalArgumentException(
-                                "Cannot cast service: " + classNames[i]);
+                                "Cannot cast service: " + className);
                     }
                 }
                 else if (!clazz.isAssignableFrom(svcObj.getClass()))
                 {
                     throw new IllegalArgumentException(
                         "Service object is not an instance of \""
-                        + classNames[i] + "\".");
+                        + className + "\".");
                 }
             }
         }
@@ -3955,12 +3953,11 @@ public class Felix extends BundleImpl implements Framework
 
         List result = new ArrayList();
 
-        for (int i = 0; i < refs.length; i++)
-        {
+        for (ServiceReference ref : refs) {
             try
             {
-                ((SecurityManager) sm).checkPermission(new ServicePermission(refs[i], ServicePermission.GET));
-                result.add(refs[i]);
+                ((SecurityManager) sm).checkPermission(new ServicePermission(ref, ServicePermission.GET));
+                result.add(ref);
             }
             catch (Exception ex)
             {
@@ -4036,7 +4033,7 @@ public class Felix extends BundleImpl implements Framework
     //
 
     private final Map<Class, Boolean> m_systemBundleClassCache =
-        new WeakHashMap<Class, Boolean>();
+        new WeakHashMap<>();
 
     /**
      * This method returns the bundle associated with the specified class if
@@ -4097,7 +4094,7 @@ public class Felix extends BundleImpl implements Framework
                     m_systemBundleClassCache.put(clazz, fromSystemBundle);
                 }
             }
-            return fromSystemBundle.booleanValue() ? this : null;
+            return fromSystemBundle ? this : null;
         }
         return null;
     }
@@ -4161,7 +4158,7 @@ public class Felix extends BundleImpl implements Framework
                         // If it's a fragment, find the revisions of the attached
                         // bundle(s) and work with those instead. Note that fragments
                         // can be attached to multiple hosts...
-                        revisions = new ArrayList<BundleRevision>();
+                        revisions = new ArrayList<>();
 
                         for (BundleWire bw : originBr.getWiring().getRequiredWires(HostNamespace.HOST_NAMESPACE))
                         {
@@ -4243,10 +4240,9 @@ public class Felix extends BundleImpl implements Framework
 
                 // Now get exported packages from installed bundles.
                 Bundle[] bundles = getBundles();
-                for (int bundleIdx = 0; bundleIdx < bundles.length; bundleIdx++)
-                {
-                    BundleImpl bundle = (BundleImpl) bundles[bundleIdx];
-                    getExportedPackages(bundle, list);
+                for (Bundle bundle : bundles) {
+                    BundleImpl bundleImpl = (BundleImpl) bundle;
+                    getExportedPackages(bundleImpl, list);
                 }
             }
             finally
@@ -4338,7 +4334,7 @@ public class Felix extends BundleImpl implements Framework
             {
                 // Get bundle revisions for bundles in INSTALLED state.
                 Set<BundleRevision> revisions =
-                    new HashSet<BundleRevision>(targets.size());
+                    new HashSet<>(targets.size());
                 for (Bundle b : targets)
                 {
                     if (b.getState() != Bundle.UNINSTALLED)
@@ -4367,11 +4363,7 @@ public class Felix extends BundleImpl implements Framework
                         }
                     }
                 }
-                catch (ResolutionException ex)
-                {
-                    result = false;
-                }
-                catch (BundleException ex)
+                catch (ResolutionException | BundleException ex)
                 {
                     result = false;
                 }
@@ -4421,7 +4413,7 @@ public class Felix extends BundleImpl implements Framework
         Collection<Bundle> newTargets = targets;
         if (newTargets == null)
         {
-            List<Bundle> list = new ArrayList<Bundle>();
+            List<Bundle> list = new ArrayList<>();
 
             // First add all uninstalled bundles.
             for (int i = 0;
@@ -4454,7 +4446,7 @@ public class Felix extends BundleImpl implements Framework
         {
             // Create map of bundles that import the packages
             // from the target bundles.
-            bundles = new HashSet<Bundle>();
+            bundles = new HashSet<>();
             for (Bundle target : newTargets)
             {
                 // If anyone passes in a null bundle, then just
@@ -4465,7 +4457,7 @@ public class Felix extends BundleImpl implements Framework
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
         }
@@ -4507,7 +4499,7 @@ public class Felix extends BundleImpl implements Framework
                     // packages from these bundles.
 
                     // Create refresh helpers for each bundle.
-                    List<RefreshHelper> helpers = new ArrayList<RefreshHelper>(bundles.size());
+                    List<RefreshHelper> helpers = new ArrayList<>(bundles.size());
                     for (Bundle b : bundles)
                     {
                         // Remove any targeted bundles from the uninstalled bundles
@@ -4622,14 +4614,14 @@ public class Felix extends BundleImpl implements Framework
             {
                 // Create map of bundles that import the packages
                 // from the target bundles.
-                bundles = new HashSet<Bundle>();
+                bundles = new HashSet<>();
                 for (Bundle target : targets)
                 {
                     // Add the current target bundle to the map of
                     // bundles to be refreshed.
                     bundles.add(target);
                     // Add all importing bundles to map.
-                    populateDependentGraph((BundleImpl) target, bundles);
+                    populateDependentGraph(target, bundles);
                 }
             }
             return bundles;
@@ -4657,7 +4649,7 @@ public class Felix extends BundleImpl implements Framework
                     // Add each dependent bundle to set.
                     set.add(b);
                     // Now recurse into each bundle to get its dependents.
-                    set = populateDependentGraph((BundleImpl) b, set);
+                    set = populateDependentGraph(b, set);
                 }
             }
         }
@@ -4681,7 +4673,7 @@ public class Felix extends BundleImpl implements Framework
 
         try
         {
-            List<Bundle> bundles = new ArrayList<Bundle>();
+            List<Bundle> bundles = new ArrayList<>();
             if (m_uninstalledBundles != null)
             {
                 for (Bundle b : m_uninstalledBundles)
@@ -5172,9 +5164,8 @@ public class Felix extends BundleImpl implements Framework
 
             // Refresh all updated bundles.
             Bundle[] bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
-            {
-                BundleImpl bundle = (BundleImpl) bundles[i];
+            for (Bundle bundle2 : bundles) {
+                BundleImpl bundle = (BundleImpl) bundle2;
                 if (bundle.isRemovalPending())
                 {
                     try
@@ -5210,19 +5201,17 @@ public class Felix extends BundleImpl implements Framework
 
             // Dispose of the bundles to close their associated contents.
             bundles = getBundles();
-            for (int i = 0; i < bundles.length; i++)
-            {
-                ((BundleImpl) bundles[i]).close();
+            for (Bundle bundle : bundles) {
+                ((BundleImpl) bundle).close();
             }
 
             m_extensionManager.stopExtensionBundles(Felix.this);
             // Stop all system bundle activators.
-            for (int i = 0; i < m_activatorList.size(); i++)
-            {
+            for (Object element : m_activatorList) {
                 try
                 {
                     Felix.m_secureAction.stopActivator((BundleActivator)
-                        m_activatorList.get(i), _getBundleContext());
+                        element, _getBundleContext());
                 }
                 catch (Throwable throwable)
                 {
