@@ -81,13 +81,13 @@ public class CapabilitySet
     public CapabilitySet(final List<String> indexProps, final boolean caseSensitive)
     {
         m_indices = (caseSensitive)
-            ? new ConcurrentSkipListMap<String, Map<Object, Set<BundleCapability>>>()
-            : new ConcurrentSkipListMap<String, Map<Object, Set<BundleCapability>>>(
+            ? new ConcurrentSkipListMap<>()
+            : new ConcurrentSkipListMap<>(
                 StringComparator.COMPARATOR);
         for (int i = 0; (indexProps != null) && (i < indexProps.size()); i++)
         {
             m_indices.put(
-                indexProps.get(i), new ConcurrentHashMap<Object, Set<BundleCapability>>());
+                indexProps.get(i), new ConcurrentHashMap<>());
         }
     }
 
@@ -216,9 +216,8 @@ public class CapabilitySet
             // Evaluate each subfilter against the remaining capabilities.
             // For OR we calculate the union of each subfilter.
             List<SimpleFilter> sfs = (List<SimpleFilter>) sf.getValue();
-            for (int i = 0; i < sfs.size(); i++)
-            {
-                matches.addAll(match(caps, sfs.get(i)));
+            for (SimpleFilter sFilter : sfs) {
+                matches.addAll(match(caps, sFilter));
             }
         }
         else if (sf.getOperation() == SimpleFilter.NOT)
@@ -227,9 +226,8 @@ public class CapabilitySet
             // For OR we calculate the union of each subfilter.
             matches.addAll(caps);
             List<SimpleFilter> sfs = (List<SimpleFilter>) sf.getValue();
-            for (int i = 0; i < sfs.size(); i++)
-            {
-                matches.removeAll(match(caps, sfs.get(i)));
+            for (SimpleFilter sFilter : sfs) {
+                matches.removeAll(match(caps, sFilter));
             }
         }
         else
@@ -249,9 +247,7 @@ public class CapabilitySet
             }
             else
             {
-                for (Iterator<Capability> it = caps.iterator(); it.hasNext(); )
-                {
-                    Capability cap = it.next();
+                for (Capability cap : caps) {
                     Object lhs = cap.getAttributes().get(sf.getName());
                     if (lhs != null)
                     {
@@ -308,9 +304,8 @@ public class CapabilitySet
             // Evaluate each subfilter against the remaining capabilities.
             // For OR we calculate the union of each subfilter.
             List<SimpleFilter> sfs = (List<SimpleFilter>) sf.getValue();
-            for (int i = 0; i < sfs.size(); i++)
-            {
-                matched = !(matchesInternal(cap, sfs.get(i)));
+            for (SimpleFilter sFilter : sfs) {
+                matched = !(matchesInternal(cap, sFilter));
             }
         }
         else
@@ -363,11 +358,10 @@ public class CapabilitySet
         else if (sf.getOperation() == SimpleFilter.AND)
         {
             List list = (List) sf.getValue();
-            for (int i = 0; i < list.size(); i++)
-            {
-                SimpleFilter sf2 = (SimpleFilter) list.get(i);
-                if ((sf2.getName() != null)
-                    && sf2.getName().equals(attrName))
+            for (Object element : list) {
+                SimpleFilter sFilter = (SimpleFilter) element;
+                if ((sFilter.getName() != null)
+                    && sFilter.getName().equals(attrName))
                 {
                     return true;
                 }
@@ -407,7 +401,7 @@ public class CapabilitySet
                 //Do nothing will check later if rhs is null
             }
 
-            if(rhs != null && rhs instanceof VersionRange)
+            if(rhs instanceof VersionRange)
             {
                 return ((VersionRange)rhs).includes((Version)lhs);
             }
@@ -591,7 +585,7 @@ public class CapabilitySet
             // does not take a string, so handle it separately.
             if (lhs instanceof Character)
             {
-                rhs = new Character(rhsString.charAt(0));
+                rhs = Character.valueOf(rhsString.charAt(0));
             }
             else if(lhs instanceof Version && rhsString.indexOf(',') >= 0)
             {
@@ -614,7 +608,7 @@ public class CapabilitySet
                         && ((valueOfMethod.getModifiers() & Modifier.STATIC) > 0))
                     {
                         m_secureAction.setAccesssible(valueOfMethod);
-                        rhs = valueOfMethod.invoke(null, new Object[] { rhsString });
+                        rhs = valueOfMethod.invoke(null, rhsString);
                     }
                 }
                 catch (Exception ex)
@@ -626,7 +620,7 @@ public class CapabilitySet
                 {
                     Constructor ctor = m_secureAction.getConstructor(lhs.getClass(), STRING_CLASS);
                     m_secureAction.setAccesssible(ctor);
-                    rhs = ctor.newInstance(new Object[] { rhsString });
+                    rhs = ctor.newInstance(rhsString);
                 }
             }
         }
