@@ -48,10 +48,8 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Objects;
 import java.util.Set;
 import java.util.WeakHashMap;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -115,7 +113,7 @@ public class ManifestParser
         }
 
         // Create lists to hold capabilities and requirements.
-        List<BundleCapabilityImpl> capList = new ArrayList<BundleCapabilityImpl>();
+        List<BundleCapabilityImpl> capList = new ArrayList<>();
 
         //
         // Parse bundle version.
@@ -171,7 +169,7 @@ public class ManifestParser
                 if (!attachment.equalsIgnoreCase(Constants.FRAGMENT_ATTACHMENT_NEVER))
                 {
                     Map<String, Object> hostAttrs =
-                        new HashMap<String, Object>(bundleCap.getAttributes());
+                        new HashMap<>(bundleCap.getAttributes());
                     Object value = hostAttrs.remove(BundleRevision.BUNDLE_NAMESPACE);
                     hostAttrs.put(BundleRevision.HOST_NAMESPACE, value);
                     capList.add(new BundleCapabilityImpl(
@@ -276,7 +274,7 @@ public class ManifestParser
             importReqs.addAll(convertImports(implicitClauses, owner));
 
             List<ParsedHeaderClause> allImportClauses =
-                new ArrayList<ParsedHeaderClause>(implicitClauses.size() + importClauses.size());
+                new ArrayList<>(implicitClauses.size() + importClauses.size());
             allImportClauses.addAll(importClauses);
             allImportClauses.addAll(implicitClauses);
 
@@ -305,21 +303,21 @@ public class ManifestParser
         List<BundleRequirement> nativeCodeReqs = convertNativeCode(owner, m_libraryClauses, m_libraryHeadersOptional);
 
         // Combine all requirements.
-        m_requirements = new ArrayList<BundleRequirement>(
+        m_requirements = new ArrayList<>(
             hostReqs.size() + importReqs.size() + rbReqs.size()
             + requireReqs.size() + dynamicReqs.size() + breeReqs.size());
-        m_requirements.addAll(hostReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
+        m_requirements.addAll(hostReqs.stream().map(req -> BundleRequirementImpl.createFrom(req, cache)).collect(Collectors.toList()));
         m_requirements.addAll(importReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
-        m_requirements.addAll(rbReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
+        m_requirements.addAll(rbReqs.stream().map(req -> BundleRequirementImpl.createFrom(req, cache)).collect(Collectors.toList()));
         m_requirements.addAll(requireReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
         m_requirements.addAll(dynamicReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
         m_requirements.addAll(breeReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
         m_requirements.addAll(nativeCodeReqs.stream().map(req -> BundleRequirementImpl.createFrom((BundleRequirementImpl) req, cache)).collect(Collectors.toList()));
         
         // Combine all capabilities.
-        m_capabilities = new ArrayList<BundleCapability>(
+        m_capabilities = new ArrayList<>(
              capList.size() + exportCaps.size() + provideCaps.size());
-        m_capabilities.addAll(capList.stream().map(cap -> BundleCapabilityImpl.createFrom((BundleCapabilityImpl) cap, cache)).collect(Collectors.toList()));
+        m_capabilities.addAll(capList.stream().map(cap -> BundleCapabilityImpl.createFrom(cap, cache)).collect(Collectors.toList()));
         m_capabilities.addAll(exportCaps.stream().map(cap -> BundleCapabilityImpl.createFrom((BundleCapabilityImpl) cap, cache)).collect(Collectors.toList()));
         m_capabilities.addAll(provideCaps.stream().map(cap -> BundleCapabilityImpl.createFrom((BundleCapabilityImpl) cap, cache)).collect(Collectors.toList()));
 
@@ -338,7 +336,7 @@ public class ManifestParser
     {
         // Verify that the values are equals if the package specifies
         // both version and specification-version attributes.
-        Set<String> dupeSet = new HashSet<String>();
+        Set<String> dupeSet = new HashSet<>();
         for (ParsedHeaderClause clause : clauses)
         {
             // Check for "version" and "specification-version" attributes
@@ -458,7 +456,7 @@ public class ManifestParser
         List<ParsedHeaderClause> clauses, BundleRevision owner)
     {
         // Now convert generic header clauses into requirements.
-        List<BundleRequirement> reqList = new ArrayList<BundleRequirement>();
+        List<BundleRequirement> reqList = new ArrayList<>();
         for (ParsedHeaderClause clause : clauses)
         {
             for (String path : clause.m_paths)
@@ -470,7 +468,7 @@ public class ManifestParser
                 // more efficient.
 // TODO: OSGi R4.3 - This is ordering is kind of hacky.
                 // Prepend the package name to the array of attributes.
-                Map<String, Object> newAttrs = new LinkedHashMap<String, Object>(attrs.size() + 1);
+                Map<String, Object> newAttrs = new LinkedHashMap<>(attrs.size() + 1);
                 // We want this first from an indexing perspective.
                 newAttrs.put(
                     BundleRevision.PACKAGE_NAMESPACE,
@@ -487,7 +485,7 @@ public class ManifestParser
                 // Inject filter directive.
 // TODO: OSGi R4.3 - Can we insert this on demand somehow?
                 Map<String, String> dirs = clause.m_dirs;
-                Map<String, String> newDirs = new HashMap<String, String>(dirs.size() + 1);
+                Map<String, String> newDirs = new HashMap<>(dirs.size() + 1);
                 newDirs.putAll(dirs);
                 newDirs.put(
                     Constants.FILTER_DIRECTIVE,
@@ -582,7 +580,7 @@ public class ManifestParser
         throws BundleException
     {
         // Now convert generic header clauses into requirements.
-        List<BundleRequirement> reqList = new ArrayList<BundleRequirement>();
+        List<BundleRequirement> reqList = new ArrayList<>();
         for (ParsedHeaderClause clause : clauses)
         {
             try
@@ -621,9 +619,9 @@ public class ManifestParser
     
     static List<BundleRequirement> convertNativeCode(BundleRevision owner, List<NativeLibraryClause> nativeLibraryClauses, boolean hasOptionalLibraryDirective)
     {
-        List<BundleRequirement> result = new ArrayList<BundleRequirement>();
+        List<BundleRequirement> result = new ArrayList<>();
         
-        List<SimpleFilter> nativeFilterClauseList = new ArrayList<SimpleFilter>();
+        List<SimpleFilter> nativeFilterClauseList = new ArrayList<>();
         
         if(nativeLibraryClauses != null && !nativeLibraryClauses.isEmpty())
         {
@@ -636,7 +634,7 @@ public class ManifestParser
                 
                 String currentSelectionFilter = clause.getSelectionFilter();
                 
-                List<SimpleFilter> nativeFilterList = new ArrayList<SimpleFilter>();
+                List<SimpleFilter> nativeFilterList = new ArrayList<>();
                 if(osNameArray != null && osNameArray.length > 0)
                 {
                     nativeFilterList.add(buildFilterFromArray(NativeNamespace.CAPABILITY_OSNAME_ATTRIBUTE, osNameArray, SimpleFilter.APPROX));
@@ -669,7 +667,7 @@ public class ManifestParser
                 }
             }
             
-            Map<String, String> requirementDirectives = new HashMap<String, String>();
+            Map<String, String> requirementDirectives = new HashMap<>();
             
             SimpleFilter consolidatedNativeFilter = null;
             
@@ -706,7 +704,7 @@ public class ManifestParser
     private static SimpleFilter buildFilterFromArray(String attributeName, String[] stringArray, int operation)
     {
         SimpleFilter result = null;
-        List<SimpleFilter> filterSet = new ArrayList<SimpleFilter>();
+        List<SimpleFilter> filterSet = new ArrayList<>();
         
         if(stringArray != null)
         {
@@ -750,7 +748,7 @@ public class ManifestParser
                     {
                         clause.m_attrs.put(
                             entry.getKey(),
-                            new Double(clause.m_attrs.get(entry.getKey()).toString().trim()));
+                            Double.valueOf(clause.m_attrs.get(entry.getKey()).toString().trim()));
                     }
                     else if (type.equals("Version"))
                     {
@@ -762,7 +760,7 @@ public class ManifestParser
                     {
                         clause.m_attrs.put(
                             entry.getKey(),
-                            new Long(clause.m_attrs.get(entry.getKey()).toString().trim()));
+                            Long.valueOf(clause.m_attrs.get(entry.getKey()).toString().trim()));
                     }
                     else if (type.startsWith("List"))
                     {
@@ -786,7 +784,7 @@ public class ManifestParser
 
                         List<String> tokens = parseDelimitedString(
                             clause.m_attrs.get(entry.getKey()).toString(), ",", false);
-                        List<Object> values = new ArrayList<Object>(tokens.size());
+                        List<Object> values = new ArrayList<>(tokens.size());
                         for (String token : tokens)
                         {
                             if (listType.equals("String"))
@@ -795,7 +793,7 @@ public class ManifestParser
                             }
                             else if (listType.equals("Double"))
                             {
-                                values.add(new Double(token.trim()));
+                                values.add(Double.valueOf(token.trim()));
                             }
                             else if (listType.equals("Version"))
                             {
@@ -803,7 +801,7 @@ public class ManifestParser
                             }
                             else if (listType.equals("Long"))
                             {
-                                values.add(new Long(token.trim()));
+                                values.add(Long.valueOf(token.trim()));
                             }
                             else
                             {
@@ -837,7 +835,7 @@ public class ManifestParser
         List<ParsedHeaderClause> clauses, BundleRevision owner)
         throws BundleException
     {
-        List<BundleCapability> capList = new ArrayList<BundleCapability>();
+        List<BundleCapability> capList = new ArrayList<>();
         for (ParsedHeaderClause clause : clauses)
         {
             for (String path : clause.m_paths)
@@ -997,14 +995,14 @@ public class ManifestParser
     private static List<BundleCapability> convertExports(
         List<ParsedHeaderClause> clauses, BundleRevision owner)
     {
-        List<BundleCapability> capList = new ArrayList<BundleCapability>();
+        List<BundleCapability> capList = new ArrayList<>();
         for (ParsedHeaderClause clause : clauses)
         {
             for (String pkgName : clause.m_paths)
             {
                 // Prepend the package name to the array of attributes.
                 Map<String, Object> attrs = clause.m_attrs;
-                Map<String, Object> newAttrs = new HashMap<String, Object>(attrs.size() + 1);
+                Map<String, Object> newAttrs = new HashMap<>(attrs.size() + 1);
                 newAttrs.putAll(attrs);
                 newAttrs.put(
                     BundleRevision.PACKAGE_NAMESPACE,
@@ -1110,7 +1108,7 @@ public class ManifestParser
             if (clause != null)
             {
                 String[] entries = clause.getLibraryEntries();
-                libs = new ArrayList<NativeLibrary>(entries.length);
+                libs = new ArrayList<>(entries.length);
                 int current = 0;
                 for (int i = 0; i < entries.length; i++)
                 {
@@ -1133,7 +1131,7 @@ public class ManifestParser
         }
         catch (Exception ex)
         {
-            libs = new ArrayList<NativeLibrary>(0);
+            libs = new ArrayList<>(0);
         }
         return libs;
     }
@@ -1152,7 +1150,7 @@ public class ManifestParser
     {
         if ((m_libraryClauses != null) && (m_libraryClauses.size() > 0))
         {
-            List<NativeLibraryClause> clauseList = new ArrayList<NativeLibraryClause>();
+            List<NativeLibraryClause> clauseList = new ArrayList<>();
 
             // Search for matching native clauses.
             for (NativeLibraryClause libraryClause : m_libraryClauses)
@@ -1185,7 +1183,7 @@ public class ManifestParser
             {
                 selected = firstSortedClause(clauseList);
             }
-            return ((NativeLibraryClause) clauseList.get(selected));
+            return (clauseList.get(selected));
         }
 
         return null;
@@ -1193,8 +1191,8 @@ public class ManifestParser
 
     private int firstSortedClause(List<NativeLibraryClause> clauseList)
     {
-        ArrayList<String> indexList = new ArrayList<String>();
-        ArrayList<String> selection = new ArrayList<String>();
+        ArrayList<String> indexList = new ArrayList<>();
+        ArrayList<String> selection = new ArrayList<>();
 
         // Init index list
         for (int i = 0; i < clauseList.size(); i++)
@@ -1208,7 +1206,7 @@ public class ManifestParser
         for (int i = 0; i < indexList.size(); i++)
         {
             int index = Integer.parseInt(indexList.get(i).toString());
-            String[] osversions = ((NativeLibraryClause) clauseList.get(index)).getOSVersions();
+            String[] osversions = clauseList.get(index).getOSVersions();
             if (osversions != null)
             {
                 selection.add("" + indexList.get(i));
@@ -1232,14 +1230,13 @@ public class ManifestParser
             // Keep only selected clauses with an 'osversion'
             // equal to the max floor of 'osversion' ranges.
             indexList = selection;
-            selection = new ArrayList<String>();
+            selection = new ArrayList<>();
             for (int i = 0; i < indexList.size(); i++)
             {
                 int index = Integer.parseInt(indexList.get(i).toString());
-                String[] osversions = ((NativeLibraryClause) clauseList.get(index)).getOSVersions();
-                for (int k = 0; k < osversions.length; k++)
-                {
-                    VersionRange range = new VersionRange(osversions[k]);
+                String[] osversions = clauseList.get(index).getOSVersions();
+                for (String osversion : osversions) {
+                    VersionRange range = new VersionRange(osversion);
                     if ((range.getLeft()).compareTo(osVersionRangeMaxFloor) >= 0)
                     {
                         selection.add("" + indexList.get(i));
@@ -1272,7 +1269,7 @@ public class ManifestParser
         for (int i = 0; i < indexList.size(); i++)
         {
             int index = Integer.parseInt(indexList.get(i).toString());
-            if (((NativeLibraryClause) clauseList.get(index)).getLanguages() != null)
+            if (clauseList.get(index).getLanguages() != null)
             {
                 selection.add("" + indexList.get(i));
             }
@@ -1293,20 +1290,18 @@ public class ManifestParser
         List<BundleCapability> exports, List<ParsedHeaderClause> imports)
         throws BundleException
     {
-        List<ParsedHeaderClause> clauseList = new ArrayList<ParsedHeaderClause>();
+        List<ParsedHeaderClause> clauseList = new ArrayList<>();
 
         // Since all R3 exports imply an import, add a corresponding
         // requirement for each existing export capability. Do not
         // duplicate imports.
-        Map<String, String> map =  new HashMap<String, String>();
+        Map<String, String> map =  new HashMap<>();
         // Add existing imports.
-        for (int impIdx = 0; impIdx < imports.size(); impIdx++)
-        {
-            for (int pathIdx = 0; pathIdx < imports.get(impIdx).m_paths.size(); pathIdx++)
-            {
+        for (ParsedHeaderClause import1 : imports) {
+            for (String element : import1.m_paths) {
                 map.put(
-                    imports.get(impIdx).m_paths.get(pathIdx),
-                    imports.get(impIdx).m_paths.get(pathIdx));
+                    element,
+                    element);
             }
         }
         // Add import requirement for each export capability.
@@ -1316,7 +1311,7 @@ public class ManifestParser
                 .get(BundleRevision.PACKAGE_NAMESPACE)) == null)
             {
                 // Convert Version to VersionRange.
-                Map<String, Object> attrs = new HashMap<String, Object>();
+                Map<String, Object> attrs = new HashMap<>();
                 Object version = exports.get(i).getAttributes().get(Constants.VERSION_ATTRIBUTE);
                 if (version != null)
                 {
@@ -1325,7 +1320,7 @@ public class ManifestParser
                         new VersionRange(version.toString()));
                 }
 
-                List<String> paths = new ArrayList<String>();
+                List<String> paths = new ArrayList<>();
                 paths.add((String)
                     exports.get(i).getAttributes().get(BundleRevision.PACKAGE_NAMESPACE));
                 clauseList.add(
@@ -1347,18 +1342,16 @@ public class ManifestParser
         // necessary since R3 bundles assumed a single class space,
         // but R4 allows for multiple class spaces.
         String usesValue = "";
-        for (int i = 0; i < imports.size(); i++)
-        {
-            for (int pathIdx = 0; pathIdx < imports.get(i).m_paths.size(); pathIdx++)
-            {
+        for (ParsedHeaderClause import1 : imports) {
+            for (String element : import1.m_paths) {
                 usesValue = usesValue
                     + ((usesValue.length() > 0) ? "," : "")
-                    + imports.get(i).m_paths.get(pathIdx);
+                    + element;
             }
         }
         for (int i = 0; i < exports.size(); i++)
         {
-            Map<String, String> dirs = new HashMap<String, String>(1);
+            Map<String, String> dirs = new HashMap<>(1);
             dirs.put(Constants.USES_DIRECTIVE, usesValue);
             exports.set(i, new BundleCapabilityImpl(
                 exports.get(i).getRevision(),
@@ -1485,7 +1478,7 @@ public class ManifestParser
             }
 
             // Create a require capability and return it.
-            String symName = (String) clauses.get(0).m_paths.get(0);
+            String symName = clauses.get(0).m_paths.get(0);
             clauses.get(0).m_attrs.put(BundleRevision.BUNDLE_NAMESPACE, symName);
             clauses.get(0).m_attrs.put(Constants.BUNDLE_VERSION_ATTRIBUTE, bundleVersion);
             return new BundleCapabilityImpl(
@@ -1501,7 +1494,7 @@ public class ManifestParser
     private static BundleCapabilityImpl addIdentityCapability(BundleRevision owner,
         Map<String, Object> headerMap, BundleCapabilityImpl bundleCap) throws BundleException
     {
-        Map<String, Object> attrs = new HashMap<String, Object>(bundleCap.getAttributes());
+        Map<String, Object> attrs = new HashMap<>(bundleCap.getAttributes());
 
         attrs.put(IdentityNamespace.IDENTITY_NAMESPACE,
             bundleCap.getAttributes().get(BundleNamespace.BUNDLE_NAMESPACE));
@@ -1551,7 +1544,7 @@ public class ManifestParser
         Logger logger, BundleRevision owner, Map<String, Object> headerMap)
         throws BundleException
     {
-        List<BundleRequirementImpl> reqs = new ArrayList<BundleRequirementImpl>();
+        List<BundleRequirementImpl> reqs = new ArrayList<>();
 
         String mv = getManifestVersion(headerMap);
         if ((mv != null) && mv.equals("2"))
@@ -1591,7 +1584,7 @@ public class ManifestParser
 // TODO: OSGi R4.3 - This is ordering is kind of hacky.
                 // Prepend the host symbolic name to the map of attributes.
                 Map<String, Object> attrs = clauses.get(0).m_attrs;
-                Map<String, Object> newAttrs = new LinkedHashMap<String, Object>(attrs.size() + 1);
+                Map<String, Object> newAttrs = new LinkedHashMap<>(attrs.size() + 1);
                 // We want this first from an indexing perspective.
                 newAttrs.put(
                     BundleRevision.HOST_NAMESPACE,
@@ -1608,7 +1601,7 @@ public class ManifestParser
                 // Inject filter directive.
 // TODO: OSGi R4.3 - Can we insert this on demand somehow?
                 Map<String, String> dirs = clauses.get(0).m_dirs;
-                Map<String, String> newDirs = new HashMap<String, String>(dirs.size() + 1);
+                Map<String, String> newDirs = new HashMap<>(dirs.size() + 1);
                 newDirs.putAll(dirs);
                 newDirs.put(
                     Constants.FILTER_DIRECTIVE,
@@ -1635,7 +1628,7 @@ public class ManifestParser
 
     private static List<BundleRequirement> parseBreeHeader(String header, BundleRevision owner)
     {
-        List<String> filters = new ArrayList<String>();
+        List<String> filters = new ArrayList<>();
         for (String entry : parseDelimitedString(header, ","))
         {
             List<String> names = parseDelimitedString(entry, "/");
@@ -1783,7 +1776,7 @@ public class ManifestParser
     private static List<BundleRequirementImpl> convertRequires(
         List<ParsedHeaderClause> clauses, BundleRevision owner)
     {
-        List<BundleRequirementImpl> reqList = new ArrayList<BundleRequirementImpl>();
+        List<BundleRequirementImpl> reqList = new ArrayList<>();
         for (ParsedHeaderClause clause : clauses)
         {
             for (String path : clause.m_paths)
@@ -1795,7 +1788,7 @@ public class ManifestParser
                 // more efficient.
 // TODO: OSGi R4.3 - This is ordering is kind of hacky.
                 // Prepend the symbolic name to the array of attributes.
-                Map<String, Object> newAttrs = new LinkedHashMap<String, Object>(attrs.size() + 1);
+                Map<String, Object> newAttrs = new LinkedHashMap<>(attrs.size() + 1);
                 // We want this first from an indexing perspective.
                 newAttrs.put(
                     BundleRevision.BUNDLE_NAMESPACE,
@@ -1812,7 +1805,7 @@ public class ManifestParser
                 // Inject filter directive.
 // TODO: OSGi R4.3 - Can we insert this on demand somehow?
                 Map<String, String> dirs = clause.m_dirs;
-                Map<String, String> newDirs = new HashMap<String, String>(dirs.size() + 1);
+                Map<String, String> newDirs = new HashMap<>(dirs.size() + 1);
                 newDirs.putAll(dirs);
                 newDirs.put(
                     Constants.FILTER_DIRECTIVE,
@@ -1942,7 +1935,7 @@ public class ManifestParser
     @SuppressWarnings({ "unchecked", "rawtypes" })
     private static List<ParsedHeaderClause> parseStandardHeader(String header)
     {
-        List<ParsedHeaderClause> clauses = new ArrayList<ParsedHeaderClause>();
+        List<ParsedHeaderClause> clauses = new ArrayList<>();
         if (header == null)
         {
             return clauses;
@@ -1965,10 +1958,10 @@ public class ManifestParser
             {
                 case CLAUSE_START:
                     clause = new ParsedHeaderClause(
-                            new ArrayList<String>(),
-                            new HashMap<String, String>(),
-                            new HashMap<String, Object>(),
-                            new HashMap<String, String>());
+                            new ArrayList<>(),
+                            new HashMap<>(),
+                            new HashMap<>(),
+                            new HashMap<>());
                     clauses.add(clause);
                     state = PARAMETER_START;
                 case PARAMETER_START:
@@ -2107,7 +2100,7 @@ public class ManifestParser
            value = "";
         }
 
-        List<String> list = new ArrayList<String>();
+        List<String> list = new ArrayList<>();
 
         int CHAR = 1;
         int DELIMITER = 2;
@@ -2198,10 +2191,10 @@ public class ManifestParser
     {
         if (libStrs == null)
         {
-            return new ArrayList<NativeLibraryClause>(0);
+            return new ArrayList<>(0);
         }
 
-        List<NativeLibraryClause> libList = new ArrayList<NativeLibraryClause>(libStrs.size());
+        List<NativeLibraryClause> libList = new ArrayList<>(libStrs.size());
 
         for (int i = 0; i < libStrs.size(); i++)
         {
@@ -2216,10 +2209,10 @@ public class ManifestParser
     {
         if (caps == null)
         {
-            return new ArrayList<BundleCapability>(0);
+            return new ArrayList<>(0);
         }
 
-        List<BundleCapability> aliasCaps = new ArrayList<BundleCapability>(caps);
+        List<BundleCapability> aliasCaps = new ArrayList<>(caps);
 
         String[] aliases = {
                 FelixConstants.SYSTEM_BUNDLE_SYMBOLICNAME,
@@ -2235,7 +2228,7 @@ public class ManifestParser
             {
                 // Make a copy of the attribute array.
                 Map<String, Object> aliasAttrs =
-                        new HashMap<String, Object>(cap.getAttributes());
+                        new HashMap<>(cap.getAttributes());
                 // Add the aliased value.
                 aliasAttrs.put(cap.getNamespace(), aliases);
                 // Create the aliased capability to replace the old capability.
@@ -2256,7 +2249,7 @@ public class ManifestParser
                 {
                     // Make a copy of the attribute array.
                     Map<String, Object> aliasAttrs =
-                            new HashMap<String, Object>(cap.getAttributes());
+                            new HashMap<>(cap.getAttributes());
                     // Add the aliased value.
                     aliasAttrs.put(Constants.BUNDLE_SYMBOLICNAME_ATTRIBUTE, aliases);
                     // Create the aliased capability to replace the old capability.
